<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/Avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pfp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/change"
            android:layout_width="110dp"
            android:layout_height="30dp"
            style="@style/blueButtonStyle"
            android:text="@string/change"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Avatar"
            android:layout_marginTop="17dp"/>

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change"/>

        <EditText
            android:id="@+id/edUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="13sp"
            android:hint="Name"
            app:layout_constraintTop_toBottomOf="@id/UserName"
            app:layout_constraintStart_toStartOf="@+id/UserName"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Address"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edUser"/>

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="Email Address"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="@+id/edUser"/>

        <TextView
            android:id="@+id/loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edEmail"/>

        <EditText
            android:id="@+id/edloc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="Location"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/loc"
            app:layout_constraintStart_toStartOf="@+id/edUser"/>

        <TextView
            android:id="@+id/donation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Address"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edloc"/>

        <EditText
            android:id="@+id/edDonation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/don"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/donation"
            app:layout_constraintStart_toStartOf="@+id/edUser"/>



        <TextView
            android:id="@+id/lub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lub"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/layoutcon"
            app:layout_constraintTop_toBottomOf="@+id/edDonation"
            android:layout_marginTop="123dp"/>






    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>