<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
        android:id="@+id/leftdesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineleftext"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/texture_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineleftext" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h5"
            android:layout_marginTop="120dp"
            android:text="@string/app_name"
            android:drawableStart="@drawable/foodbridge"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/rightaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/appName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/rightaddress"
            android:gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/newaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintTop_toBottomOf="@+id/rightaddress"
            app:layout_constraintStart_toStartOf="@+id/rightaddress"
            app:layout_constraintEnd_toEndOf="@+id/rightaddress"
            android:layout_marginTop="15dp"
            android:text="@string/together"
            android:gravity="center"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/newaddress"
            app:layout_constraintStart_toStartOf="@+id/guidelineelilpseleft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineellipseright"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Register"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            style="@style/whiteButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/registerButton"
            app:layout_constraintStart_toStartOf="@+id/guidelineelilpseleft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineellipseright"
            android:layout_marginTop="10dp"
            android:text="Login"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineleftext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="242dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineelilpseleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineellipseright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineellipsetop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="139dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineellipsebottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="380dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="680dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>